# array_api

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.rst  pyproject.toml  setup.py  tox.ini
src/array_api/: __init__.py  _array.py  _constants.py  _creation_functions.py  _data_type_functions.py  _device.py  _dtype.py  _elementwise_functions.py  _linear_algebra_functions.py  _manipulation_functions.py  _namespace.py  _namespace_api.py  _searching_functions.py  _set_functions.py  _sorting_functions.py  _statistical_functions.py  _types.py  _utility_functions.py  array.py  constants.py  creation_functions.py  data_type_functions.py  device.py  dtype.py  elementwise_functions.py  linear_algebra_functions.py  manipulation_functions.py  namespace.py  searching_functions.py  set_functions.py  sorting_functions.py  statistical_functions.py  utility_functions.py
src/array_api/linalg/: __init__.py  _core.py  _namespace.py  _types.py  core.py
